# opentelemetry-demo-app

./: Cargo.toml  Dockerfile  README.md  config.yml  docker-compose.yaml
src/: config.rs  handlers.rs  main.rs  middleware.rs  routes.rs
