[package]
name = "opentelemetry-demo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
redis = "0.32.2"
bb8 = "0.8"
bb8-redis = "0.18"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.30.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tower-http = { version = "0.6", features = ["trace"] }
http = "1.0"
hyper = "1.0"
